--- a/resources/index.html
+++ b/resources/index.html
@@ -1660,7 +1660,7 @@
 													data-widget_type="heading.default">
 													<div class="elementor-widget-container">
 														<p class="elementor-heading-title elementor-size-default"><a
-																href="https://wiseadvizor.com/privacy-policy/">Privacy
+																href="https://wiseadvizor.com/privacy-policy">Privacy
 																Policy</a></p>
 													</div>
 												</div>
@@ -1674,7 +1674,7 @@
 													data-widget_type="heading.default">
 													<div class="elementor-widget-container">
 														<p class="elementor-heading-title elementor-size-default"><a
-																href="https://wiseadvizor.com/terms-conditions/">Terms
+																href="https://wiseadvizor.com/terms-conditions">Terms
 																& Conditions</a></p>
 													</div>
 												</div>
@@ -1688,7 +1688,7 @@
 													data-widget_type="heading.default">
 													<div class="elementor-widget-container">
 														<p class="elementor-heading-title elementor-size-default"><a
-																href="https://wiseadvizor.com/community-guidelines/">Community
+																href="https://wiseadvizor.com/community-guidelines">Community
 																Guidelines</a></p>
 													</div>
 												</div>
@@ -1702,7 +1702,7 @@
 													data-widget_type="heading.default">
 													<div class="elementor-widget-container">
 														<p class="elementor-heading-title elementor-size-default"><a
-																href="https://wiseadvizor.com/about-us/">About Us</a>
+																href="https://wiseadvizor.com/about-us">About Us</a>
 														</p>
 													</div>
 												</div>
@@ -1716,7 +1716,7 @@
 													data-widget_type="heading.default">
 													<div class="elementor-widget-container">
 														<p class="elementor-heading-title elementor-size-default"><a
-																href="https://wiseadvizor.com/contact-us/">Contact
+																href="https://wiseadvizor.com/contact-us">Contact
 																Us</a></p>
 													</div>
 												</div>
@@ -1730,7 +1730,7 @@
 													data-widget_type="heading.default">
 													<div class="elementor-widget-container">
 														<p class="elementor-heading-title elementor-size-default"><a
-																href="https://wiseadvizor.com/blogs/">FAQs</a></p>
+																href="https://wiseadvizor.com/blogs">FAQs</a></p>
 													</div>
 												</div>
 											</div>
