--- a/resources/index.html
+++ b/resources/index.html
@@ -29,7 +29,7 @@
 		var theplus_nonce = "db17101d24";
 	</script>
 	<meta name="robots" content="max-image-preview:large">
-	<link rel="dns-prefetch" href="//fonts.googleapis.com">
+	<link rel="dns-prefetch" href="//fonts.googleapis.com&display=swap">
 	<link rel="alternate" type="application/rss+xml" title="wiseAdvizor &raquo; Feed"
 		href="https://wiseadvizor.com">
 	<script>
